Make the position of top navbar fixed This should provide an alternative solution to #973, without causing too much trouble.

--- a/asset/css/markbind.css
+++ b/asset/css/markbind.css
@@ -103,6 +103,7 @@ code.hljs.inline {
     padding: 0 20px;
     transition: 0.4s;
     width: 100%;
+    margin-top: 80px;
     -webkit-transition: 0.4s;
 }
 
@@ -132,7 +133,7 @@ footer {
     overflow-y: auto;
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 1rem;
+    padding-top: 90px;
     top: 0;
 }
 
